--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-CN">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="shortcut icon" href="<%=htmlWebpackPlugin.options.projectUrl%>favicon.ico" />
     <title><%= process.env.PROJECT_PC_NAME %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
